mudei nome studio

--- a/royale beuaty/index.html
+++ b/royale beuaty/index.html
@@ -49,7 +49,7 @@
    
     <main>
         <article>
-            <p>O <strong>Studio Renata Macêdo </strong>está localizado na Av. João XXIII um dos bairros mais tradicionais de Teresina. Contamos com um estacionamento gratuito e estrutura de dois andares, onde prestamos serviços em diversas áreas da beleza. O conceito do <strong>Studio Renata Macêdo </strong> vai muito além de uma prestação de serviços, nós visamos o bem-estar, cuidando da autoestima e realçando a beleza única de cada cliente, prezamos por um atendimento personalizado e ambiente aconchegante, proporcionando momentos exclusivos de self-care.</p>
+            <p>O <strong>Royale Beauty </strong>está localizado na Av. João XXIII um dos bairros mais tradicionais de Teresina. Contamos com um estacionamento gratuito e estrutura de dois andares, onde prestamos serviços em diversas áreas da beleza. O conceito do <strong>Studio Renata Macêdo </strong> vai muito além de uma prestação de serviços, nós visamos o bem-estar, cuidando da autoestima e realçando a beleza única de cada cliente, prezamos por um atendimento personalizado e ambiente aconchegante, proporcionando momentos exclusivos de self-care.</p>
     <br>
 
             <picture>
