--- a/royale beuaty/index.html
+++ b/royale beuaty/index.html
@@ -22,9 +22,9 @@
       <nav>
         <div>
           <ul class="social-icons">
-            <a href="https://www.facebook.com/zenilda.shynaider" target="_blank"><i class="fa fa-facebook"><img src="facebook.png" height="45px" width1="45px"></i></a>  
+            <a href="https://www.facebook.com/renata.britto.31" target="_blank"><i class="fa fa-facebook"><img src="facebook.png" height="45px" width1="45px"></i></a>  
             
-            <a href="https://www.instagram.com/shynaidermartins/" target="_blank"><i class="fa fa-facebook"><img src="instagram.png" height="45px" width1="45px"></i></a>  
+            <a href="https://www.instagram.com/royalebeautythe/" target="_blank"><i class="fa fa-facebook"><img src="instagram.png" height="45px" width1="45px"></i></a>  
           </ul>
         </div>      
       </nav>
