--- a/royale beuaty/index.html
+++ b/royale beuaty/index.html
@@ -115,7 +115,7 @@
 </main>        
 <br>
 <footer>
-    <p>Criado por @Shynaider Martins</p>
+    <p>© 2020. ROYALE BEAUTY | Todos os direitos reservados. Site desenvolvido pela  @Shynaider Martins</p>
 
     <div>
       <a href="https://api.whatsapp.com/send?phone=5586999927775" 
