--- a/royale beuaty/index.html
+++ b/royale beuaty/index.html
@@ -37,8 +37,8 @@
 
     <menu id="itens"> 
         <ul>
-            <li><a href="index.html">SOBRE NÓS</a></li>  
-            <li><a href="indexnossaequipe.html">EQUIPE</a></li>  
+            <li><a href="index.html">HOME</a></li>  
+            <li><a href="indexnossaequipe.html">SOBRE NÓS</a></li>  
             <li><a href="indexcombos.html">COMBOS</a></li>  
             <li><a href="indexlocalização.html">LOCALIZAÇÃO</a></li>  
      
