inserir galeria de fotos

--- a/royale beuaty/index.html
+++ b/royale beuaty/index.html
@@ -112,6 +112,8 @@
             </ul>
           </div>
 
+          <h2 class="galeria">GALERIA</h2>
+
 </main>        
 <br>
 <footer>
@@ -123,6 +125,8 @@
          <img  class="whatsapp" src="https://assets.boxloja.pro/shop/img/whatsapp.png" />
       </a>
   </div>
+
+  
 </footer>
 
 <script>
