--- a/royale beuaty/index.html
+++ b/royale beuaty/index.html
@@ -40,7 +40,7 @@
             <li><a href="index.html">HOME</a></li>  
             <li><a href="indexnossaequipe.html">SOBRE NÓS</a></li>  
             <li><a href="indexcombos.html">COMBOS</a></li>  
-            <li><a href="indexlocalização.html">LOCALIZAÇÃO</a></li>  
+            <li><a href="indexlocalização.html">SERVIÇOS</a></li>  
      
         </ul>
       
