--- a/royale beuaty/index.html
+++ b/royale beuaty/index.html
@@ -15,6 +15,7 @@
 <body onresize="mudouTamanho()">
  
     <header>
+      <nav>
       <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</i>   
       <menu id="itens"> 
          <ul>
